--- a/html code/20211013/문제2.html
+++ b/html code/20211013/문제2.html
@@ -10,7 +10,7 @@
     <table border="1">
         <caption>colgroup연습</caption>
         <colgroup>
-        <col span="1" style="background: white;">
+        <col style="background:null">
         <col span="2" style="background: indianred;">
         <col style="background: blue;">
         </colgroup>
@@ -21,7 +21,6 @@
                 <td rowspan="3"align="center">Dog</td>
                 <td rowspan="3"align="center">Bulldog</td>
             </tr>
-            
             <tr>
                 <tr>
                 </tr>
