야구 -> 배구로 교체

--- a/html code/20211013/14_checkbox_radio.html
+++ b/html code/20211013/14_checkbox_radio.html
@@ -13,7 +13,7 @@
     <!-- input:checkmox*3 -->
     <input type="checkbox" name="" id="soccer">축구<br>
     <input type="checkbox" name="" id="basketball">농구<br>
-    <input type="checkbox" name="" id="bally">야구<br>
+    <input type="checkbox" name="" id="bally">배구<br>
     <!-- 만약 아래 5개의 raido가 name값이 다 똑같으면 5개중 하나를 선택해야함 -->
     <!-- checked를 적어주면 웹페이지 시작시 해당태그를 선택한체로 시작함 -->
     <input type="radio" name="gender" id="male">남자<br>
@@ -26,7 +26,8 @@
     </form>
     <hr>
     <!-- 이름이란 글자를 클릭하면 id가 name인 태그에 focus가 맞춰짐 -->
-    <input type="radio" name="name" id="name"><label for="name"></label>이름1 <br>
+
+    <input type="radio" name="name" id="name">이름1 <br>
     <input type="radio" name="name" id="name">이름2 <br>
 
 
