--- a/html code/20211013/10_youtube.html
+++ b/html code/20211013/10_youtube.html
@@ -11,6 +11,7 @@
 <body>
     <h1>유튜브 동영상</h1>
     <video controls>
+        <!-- 이런식으로 퍼가면 안된다 -->
         <source src="https://www.youtube.com/watch?v=3z3CWPUajvA">
     </video>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/3z3CWPUajvA" title="YouTube video player"
