--- a/html code/20211013/11_iframe.html
+++ b/html code/20211013/11_iframe.html
@@ -10,6 +10,7 @@
     <!-- iframe 외부의 페이지를 보여주는 태그 -->
     <iframe src="01_review_html.html" frameborder="1"></iframe>
 
-    <iframe> width=600px height=600px src=http://www.daum.net</iframe>
+    <iframe width=600px height=600px src="http://www.daum.net" frameborder="1"
+</iframe>
 </body>
 </html>
