--- a/html code/20211013/13_form.html
+++ b/html code/20211013/13_form.html
@@ -9,7 +9,9 @@
 <body>
     <!-- get방식 -->
     <!-- method에 아무것도 적지 않으면 기본으로 적용됨 -->
-    <form action="http://www.naver.com" method="get">
+    <!-- action에 내가 가고자 하는 사이트를 적고 ,form안에 input에다가는 내가 가려는 그 사이트의
+    전송할 정보를 적는다. -->
+    <form action="#" method="get">
         <input type="text" name="search">
         <input type="submit">
     </form>
