--- a/2021-10-26/18_clear_both.html
+++ b/2021-10-26/18_clear_both.html
@@ -33,7 +33,7 @@
             clear: both;
         }
         /* 구버전 웹 브라우저에서는 지원 안될수도 있음
-        일ㅈㅇ의 보이지 않는 경계 같은것을 생성한다 */
+        일종의 보이지 않는 경계 같은것을 생성한다 */
     </style>
     <title>기본 웹</title>
 </head>
