--- a/2021-10-27/02_standard_webpage.html
+++ b/2021-10-27/02_standard_webpage.html
@@ -42,10 +42,13 @@
             /* 높이도 주고 부모의 position을 static이외의 것을 주면서
             자손태그의 absolute를 제대로 적용시키려고 함 */
             height: 160px;
+            background-color: darkolivegreen;
         }
         #main_header p{
             font-family: 'SBAggroB';
             color: black;
+            text-align: center;
+            
         }
         #main_header>#title {
             position: absolute;
@@ -71,6 +74,11 @@
         #main_gnb>ul {
             overflow: hidden;
         }
+        #main_gnb>p{
+            border: 3px solid black;
+            border-radius: 10px 10px 10px 10px;
+            background-color: white;
+        }
 
         #main_gnb>ul>li {
             float: left
@@ -79,18 +87,27 @@
         #main_gnb>ul>li>a {
             display: block;
             padding: 2px 10px;
-            border: 1px solid white;
+            border: 2px solid darkorange;
             background-color: black;
+            color: white;
         }
 
         #main_gnb>ul>li>a:hover {
-            background-color: black;
-            color: white;
+            background-color: grey;
+            color: blue;
         }
 
         #main_gnb>ul>li:first-child>a {
             border-radius: 10px 0 0 10px;
             background-color: black;
+        }
+        #main_gnb>ul>li:first-child>a:hover{
+            background-color: gray;
+            color: blue;
+        }
+        #main_gnb>ul>li:last-child>a:hover{
+            background-color: gray;
+            color: blue;
         }
 
         #main_gnb>ul>li:last-child>a {
@@ -103,6 +120,13 @@
         #main_lnb>ul {
             overflow: hidden;
         }
+        #main_lnb>p{
+            border: 5px solid black;
+            border-radius: 10px 10px 10px 10px;
+            float: left;
+            float: none;
+            background-color: white;
+        }
 
         #main_lnb>ul>li {
             float: left;
@@ -112,23 +136,33 @@
         #main_lnb>ul>li>a {
             display: block;
             padding: 10px 20px;
-            border: 1px solid white;
+            border: 2px solid orange;
             background-color: black;
+            color: white;
         }
 
         #main_lnb>ul>li>a:hover {
-            background-color: black;
-            color: white;
+            background-color: grey;
+            color: blue;
         }
 
         #main_lnb>ul>li:first-child>a {
             border-radius: 10px 0px 0px 10px;
             background-color: black;
         }
+        #main_lnb>ul>li:first-child>a:hover {
+            background-color: grey;
+            color: blue
+        }
 
         #main_lnb>ul>li:last-child>a {
             border-radius: 0px 10px 10px 0px;
             background-color: black;
+        }
+        
+        #main_lnb>ul>li:last-child>a:hover {
+            background-color: grey;
+            color: blue
         }
     </style>
     <style>
@@ -149,6 +183,9 @@
         @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Festive&family=Oswald&display=swap');
 
         h2 {
+            font-family: 'Bebas Neue', cursive;
+        }
+        #main_footer{
             font-family: 'Bebas Neue', cursive;
         }
     </style>
@@ -318,7 +355,7 @@
             <h2>이스케이프 프롬 타르코프</h2>
         </div>
         <div id="main_gnb">
-            <p>맵 리스트</p>
+            <p>게임 속 맵 리스트</p>
             <ul>
                 <!-- (li>a[href=#]{$})*5 -->
                 <li><a href="#">커스텀</a></li>
@@ -330,7 +367,7 @@
             </ul>
         </div>
         <div id="main_lnb">
-            <p>각종 정보</p>
+            <p>게임속의 각종 정보</p>
             <ul>
                 <li><a href="#">무기</a></li>
                 <li><a href="#">방어구</a></li>
@@ -369,7 +406,7 @@
                 <p>Fps게임답게 총의 대한 커스터마이징이 가능한데, 다른게임과는 다르게 Escape From Tarkov의 커스터마이징은
                     타 게임에서 볼수 없는 커스터마이징을 자랑한다.<br>
                     조준경,총구,손잡이를 기본으로 총열의 길이,개머리판의 종류,플래시 라이트나 레이저의 종류 및 갯수<br>
-                    심지어는 사용할 탄창의 종류나 총알마저 고를수있게 되있다.
+                    심지어는 사용할 탄창의 종류나 총알마저 고를수있게 시스템이 되어있다.
                 </p>
             </article>
             <article class="main_article">
@@ -490,8 +527,8 @@
     </aside>
     </div>
     <footer id="main_footer">
-        <h3>HTML5+CSS Basic</h3>
-        <address>WebSite Layout Basic</address>
+        <h3>작성자 : 권용규</h3>
+        <address>문의 : kwon6772@naver.com</address>
     </footer>
 
 </body>
