--- a/2021-10-27/02_standard_webpage.html
+++ b/2021-10-27/02_standard_webpage.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>게임 소개 페이지</title>
     <style>
-    </style>
-    <style>
         * {
             margin: 0;
             padding: 0;
@@ -254,7 +252,7 @@
             display: block
         }
 
-        /*탭 모양 구성*/
+
         section.buttons {
             overflow: hidden;
         }
@@ -279,7 +277,6 @@
             color: white;
         }
 
-        /*radio가 체크되었을때 옆에 있는 라벨등 중 첫번째 라벨*/
         /*First*/
         input:nth-of-type(1):checked~section.buttons>label:nth-of-type(1) {
             background-color: white;
@@ -357,7 +354,6 @@
         <div id="main_gnb">
             <p>게임 속 맵 리스트</p>
             <ul>
-                <!-- (li>a[href=#]{$})*5 -->
                 <li><a href="#">커스텀</a></li>
                 <li><a href="#">인터체인지</a></li>
                 <li><a href="#">쇼어라인</a></li>
@@ -412,7 +408,9 @@
             <article class="main_article">
                 <h1>현실적인 플레이</h1>
                 <p>타르코프의 또다른 매력은 현실과 맞는 고증이다. <br>
-                모든 총기,방어구,기타 물품은 게임속에서 구하거나</p>
+                모든 총기,방어구,기타 물품은 게임속에서 구하거나 자신의 돈을 사용해서 구매해서 사용해야한다.
+                그렇기에 돈을 쓴 만큼 남들과는 다른 강한 무장을 지닐수 있는데 강한 무장을 지녔다고 해서 무조건 승리할순 없다.
+                아무리 강한 헬멧이라도 총알 한방에 모든걸 내려놓는 경우도 일상다반사다.</p>
             </article>
         </section>
 
@@ -420,8 +418,8 @@
             <input id="first" type="radio" name="tab" checked="checked">
             <input id="second" type="radio" name="tab">
             <section class="buttons">
-                <label for="first">First</label>
-                <label for="second">Second</label>
+                <label for="first">스토리</label>
+                <label for="second">상인</label>
             </section>
             <div class="tab_item">
                 <ul>
@@ -431,8 +429,8 @@
                                 <img src="https://picsum.photos/id/1025/45/45" alt="">
                             </div>
                             <div class="description">
-                                <strong>몬가있음</strong>
-                                <p>아무튼 몬가 몬가 있음</p>
+                                <strong>타르코프</strong>
+                                <p>러시아 연구소의 비밀</p>
                             </div>
                         </a>
                     </li>
@@ -442,8 +440,8 @@
                                 <img src="https://picsum.photos/id/1025/45/45" alt="">
                             </div>
                             <div class="description">
-                                <strong>몬가있음</strong>
-                                <p>아무튼 몬가 몬가 있음</p>
+                                <strong>USEC</strong>
+                                <p>미국의 민간군사 이야기</p>
                             </div>
                         </a>
                     </li>
@@ -453,8 +451,8 @@
                                 <img src="https://picsum.photos/id/1025/45/45" alt="">
                             </div>
                             <div class="description">
-                                <strong>몬가있음</strong>
-                                <p>아무튼 몬가 몬가 있음</p>
+                                <strong>BEAR</strong>
+                                <p>러시아의 민간군사 이야기</p>
                             </div>
                         </a>
                     </li>
@@ -464,8 +462,8 @@
                                 <img src="https://picsum.photos/id/1025/45/45" alt="">
                             </div>
                             <div class="description">
-                                <strong>몬가있음</strong>
-                                <p>아무튼 몬가 몬가 있음</p>
+                                <strong>SCAV</strong>
+                                <p>버려진 무장시민 단체 이야기</p>
                             </div>
                         </a>
                     </li>
@@ -481,8 +479,8 @@
                                 <img src="https://picsum.photos/id/1020/45/45" alt="">
                             </div>
                             <div class="description">
-                                <strong>두번째에도</strong>
-                                <p>아무튼 몬가 몬가 있음</p>
+                                <strong>프라퍼</strong>
+                                <p>물리 관리관의 이야기</p>
                             </div>
                         </a>
                     </li>
@@ -492,8 +490,8 @@
                                 <img src="https://picsum.photos/id/1020/45/45" alt="">
                             </div>
                             <div class="description">
-                                <strong>두번째에도</strong>
-                                <p>아무튼 몬가 몬가 있음</p>
+                                <strong>테라피스트</strong>
+                                <p>시민을 살리기 위해 타인의 살해를 의뢰하는 의사 이야기</p>
                             </div>
                         </a>
                     </li>
@@ -503,8 +501,8 @@
                                 <img src="https://picsum.photos/id/1020/45/45" alt="">
                             </div>
                             <div class="description">
-                                <strong>두번째에도</strong>
-                                <p>아무튼 몬가 몬가 있음</p>
+                                <strong>스키어</strong>
+                                <p>혼란을 틈타 한몫 챙기려는 보급관</p>
                             </div>
                         </a>
                     </li>
@@ -514,8 +512,8 @@
                                 <img src="https://picsum.photos/id/1020/45/45" alt="">
                             </div>
                             <div class="description">
-                                <strong>두번째에도</strong>
-                                <p>아무튼 몬가 몬가 있음</p>
+                                <strong>피스키퍼</strong>
+                                <p>UN평화유지군의 이야기</p>
                             </div>
                         </a>
                     </li>
